# L2_ProjetC_Rules

./: CMakeLists.txt  README.md
cmake/: FindClangFormat.cmake
data/: example.rules.txt
docs/: conf.py  index.rst
doxygen/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  menudata.js  rules_8c.html  rules_8h.html  rules_8h_source.html  struct___tab.html  struct___tab__tab.html
doxygen/html/search/: all_6.js  all_7.js  all_9.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
doxygen/latex/: annotated.tex  files.tex  refman.tex  rules_8c.tex  rules_8h.tex  rules_8h_source.tex  struct___tab.tex  struct___tab__tab.tex
src/: CMakeLists.txt  RulesConfig.cmake.in  rules.c  rules.h  rules.pc.in  tab-tab.inc  tab.inc  test-add-output.c  test-file-exist.c  test-fill-facts.c  test-fill-output.c  test-fill-rules.c  test-find-facts.c  test-initialize-facts.c  test-initialize-output.c  test-initialize-rules.c  test-output-fwrite.c  test-size-tab-file.c
